examples/test/testpolicy15508.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15508
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key13: value6
      key44: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value5
          key33: value20
          key5: value14
      podSelector:
        matchLabels:
          key3: value5
          key37: value30
